# residue-cpp

./: .gitignore  .travis.yml  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CMakeLists.txt  CREDITS.md  FindResidue.cmake  LICENSE  README.md  install.sh
cmake/: FindResidue.cmake
include/: Residue.h  easylogging++.h  json.h  residue.h
samples/: client.conf.json
samples/DetailedExample/: .gitignore  DetailedExample.pro  log.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
samples/LogBox/: log.h  logbox.cpp  logbox.h
samples/detailed-cmake/: CMakeLists.txt
samples/detailed-cmake/cmake/: FindEASYLOGGINGPP.cmake  FindResidue.cmake
samples/detailed-cmake/src/: app.cc  log.h
samples/fast-dictionary/: .gitignore  README.md  log.h  main.cc
samples/minimal/: .gitignore  Makefile  README.md  conf.json  main.cc  main2.cc
src/: Residue.cc  dispatcher.cc  dispatcher.h  easylogging++.cc  internal-logger.cc  internal-logger.h  log.h  network-client.cc  network-client.h  residue.cc
test/: main.cc  test.h  testx.h
tools/: package.sh
tools/doxygen/: README_DOXYGEN.md  conf
